# mockwatchlogs

./: Cargo.toml  Dockerfile  README.md
src/: actions.rs  lib.rs  main.rs  streams.rs  types.rs  util.rs
tests/: rusoto.rs
